# rust-http-server-tutorial

./: Cargo.toml  README.md  abi.proto  book.toml  simple_http_server  test_http_server
examples/: simple_client.rs  simple_http_server.rs  simple_server.rs  test_http_server.rs
lib/: lib.rs
loadtest_log/: simple_http_server  simple_http_server_500  simple_http_server_5000_ulimit  simple_http_server_6000_ulimit  simple_http_server_8000_ulimit  test_http_server  test_http_server_300
loadtest_log/async_http_server/: async_http_server_100  async_http_server_1000  async_http_server_10000_ulimit  async_http_server_2000  async_http_server_2000_ulimit  async_http_server_3000  async_http_server_3000_ulimit  async_http_server_5000_ulimit
loadtest_log/simple_http_server/: simple_http_server_100  simple_http_server_1000  simple_http_server_10000  simple_http_server_10000_ulimit  simple_http_server_1500  simple_http_server_2000  simple_http_server_2000_ulimit  simple_http_server_300  simple_http_server_3000  simple_http_server_3000_ulimit  simple_http_server_5000  simple_http_server_5000_ulimit
public/: index.css  index.html  index.js  you-know-who.html
src/: Error.rs  HttpResponse.rs  SUMMARY.md  lib.rs  main.rs  request.rs  序言.md  环境搭建.md
src/一个简陋的 HTTP 服务器实现/: "拆分逻辑 & 让错误逐层传播.md"  一个简单实现.md  做个压力测试看看效果.md  加上测试和文档.md  拆分逻辑 & 让错误逐层传播.md
src/从简单实现到模块化实现/: 一个简单实现.md  加上测试和文档！.md  拆分逻辑 & 让错误逐层传播.md
src/客户端与服务端的约定/: README.md  字节序.md
src/每次都要找操作系统要线程？准备一堆干净可重用的线程到手头边/: 建立线程池.md
src/线程不能一鱼多吃？IO复用考虑一下/: 可复用的IO，select & poll登场！.md
src/线程池实现 vs 协程实现/: README.md
(+4 files in other folders)
