[package]
name = "network_programming_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.34.0"
http = "0.2.5"
socket2 = "0.4.2"
thiserror = "1.0"
tokio = { version = "1.1", features = ["full"] }