[package]
name = "network_programming_tutorial"
version = "0.1.0"
authors = ["natsunoyoru97"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0", features = ["derive"] } # 命令行解析库
http = "0.2.5" # HTTP Uri 解析
httparse = "1.5.0"
image = "0.23.14"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] } # 结构化日志库
slog-async = "2.7.0"
slog-term = "2.8.0"
socket2 = "0.4.2"
thiserror = "1.0"
tokio = { version = "1.1", features = ["full"] } # Rust 异步运行时